--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0",
+    "axios": "^0.19.2",
+    "discord.js": "^12.2.0"
+  },
+  "devDependencies": {
     "dotenv": "^8.2.0"
   }
 }
