--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-minecraft-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Notifies users when a player joins or leaves a minecraft server.",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "discord.js": "^12.2.0",
     "minecraft-server-util": "^1.3.0"
