--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ BOT_TOKEN=213324523421
 NODE_ENV=development
 MINECRAFT_SERVER=server.url
 DISCORD_CHANNEL_NAME=online
+INTERVAL=60000  # Amount of time between update in miliseconds
